--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
+    "multi-range-slider-react": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "6",
     "reactstrap": "^9.2.0"
   },
